--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.6.7",
         "druidfi/omen": "^0.2.0",
+        "drupal/adminimal_theme": "^1.6",
+        "drupal/config_pages": "^2.8",
         "drupal/core-composer-scaffold": "^9.0",
         "drupal/core-recommended": "^9.0",
         "drupal/entity_browser": "^2.5",
