--- a/conf/cmi/core.base_field_override.node.article.moderation_state.yml
+++ b/conf/cmi/core.base_field_override.node.article.moderation_state.yml
@@ -1,17 +1,17 @@
-uuid: 6e499d98-fee1-41d2-b52d-1ddb97b3af30
+uuid: 765255e8-0429-4662-8cd5-ebdb3cc175db
 langcode: en
 status: true
 dependencies:
   config:
-    - node.type.landing_page
-id: node.landing_page.moderation_state
+    - node.type.article
+id: node.article.moderation_state
 field_name: moderation_state
 entity_type: node
-bundle: landing_page
+bundle: article
 label: 'Moderation state'
 description: 'The moderation state of this piece of content.'
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
