--- a/conf/cmi/core.base_field_override.node.article.promote.yml
+++ b/conf/cmi/core.base_field_override.node.article.promote.yml
@@ -1,17 +1,17 @@
-uuid: 739d93cd-8251-4124-bc6d-7ff4b5b44b92
+uuid: e0a63a31-1bba-4dcf-970a-774d47d7e21a
 langcode: en
 status: true
 dependencies:
   config:
-    - paragraphs.paragraphs_type.hero
-id: paragraph.hero.status
-field_name: status
-entity_type: paragraph
-bundle: hero
-label: Published
+    - node.type.article
+id: node.article.promote
+field_name: promote
+entity_type: node
+bundle: article
+label: 'Promoted to front page'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: 1
