--- a/conf/cmi/field.field.node.landing_page.field_content.yml
+++ b/conf/cmi/field.field.node.landing_page.field_content.yml
@@ -5,7 +5,12 @@ dependencies:
   config:
     - field.storage.node.field_content
     - node.type.landing_page
+    - paragraphs.paragraphs_type.from_library
     - paragraphs.paragraphs_type.hero
+    - paragraphs.paragraphs_type.image_text
+    - paragraphs.paragraphs_type.images
+    - paragraphs.paragraphs_type.text
+    - paragraphs.paragraphs_type.text_image
   module:
     - entity_reference_revisions
 id: node.landing_page.field_content
@@ -15,7 +20,7 @@ bundle: landing_page
 label: Content
 description: 'Add paragraphs'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -23,29 +28,34 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
+      from_library: from_library
       hero: hero
+      image_text: image_text
+      images: images
+      text: text
+      text_image: text_image
     target_bundles_drag_drop:
       from_library:
+        enabled: true
         weight: 9
-        enabled: false
       hero:
         enabled: true
         weight: 10
       image_text:
+        enabled: true
         weight: 11
-        enabled: false
       images:
+        enabled: true
         weight: 12
-        enabled: false
       nested_paragraph:
         weight: 13
         enabled: false
       text:
+        enabled: true
         weight: 14
-        enabled: false
       text_image:
+        enabled: true
         weight: 15
-        enabled: false
       user:
         weight: 16
         enabled: false
