--- a/conf/cmi/field.field.paragraph.hero.field_hero_image.yml
+++ b/conf/cmi/field.field.paragraph.hero.field_hero_image.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.paragraph.field_hero_image
     - paragraphs.paragraphs_type.hero
   module:
+    - content_translation
     - image
+third_party_settings:
+  content_translation:
+    translation_sync:
+      alt: alt
+      title: title
+      file: '0'
 id: paragraph.hero.field_hero_image
 field_name: field_hero_image
 entity_type: paragraph
@@ -14,7 +21,7 @@ bundle: hero
 label: Hero-image
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
