--- a/conf/cmi/field.field.paragraph.hero.field_koro_style.yml
+++ b/conf/cmi/field.field.paragraph.hero.field_koro_style.yml
@@ -13,7 +13,7 @@ bundle: hero
 label: Koro-style
 description: 'Use diagonal, down bottom horizontal or none for Koro style'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
