--- a/conf/cmi/language.content_settings.node.article.yml
+++ b/conf/cmi/language.content_settings.node.article.yml
@@ -1,18 +1,18 @@
-uuid: 489e16aa-a003-40b7-845c-add215a31068
+uuid: 4761bbc4-497d-407a-9fae-1f0de13ded9b
 langcode: en
 status: true
 dependencies:
   config:
-    - paragraphs.paragraphs_type.hero
+    - node.type.article
   module:
     - content_translation
 third_party_settings:
   content_translation:
-    enabled: true
+    enabled: false
     bundle_settings:
       untranslatable_fields_hide: '0'
-id: paragraph.hero
-target_entity_type_id: paragraph
-target_bundle: hero
+id: node.article
+target_entity_type_id: node
+target_bundle: article
 default_langcode: site_default
-language_alterable: true
+language_alterable: false
