--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "drupal/config_pages": "^2.8",
         "drupal/core-composer-scaffold": "^9.0.9",
         "drupal/core-recommended": "^9.0.9",
+        "drupal/decoupled_router": "^2.0",
         "drupal/devel": "^4.0",
         "drupal/entity_browser": "^2.5",
+        "drupal/entity_reference_revisions": "^1.8",
         "drupal/entity_usage": "^2.0@beta",
         "drupal/features": "^3.11",
         "drupal/graphql": "^3.1",
@@ -24,8 +26,11 @@
         "drupal/helfi_platform_config": "^1.0.0",
         "drupal/helfi_tpr": "^1.0",
         "drupal/helfi_tunnistamo": "^1.0",
+        "drupal/jsonapi_extras": "^3.16",
         "drupal/paragraphs": "^1.12",
+        "drupal/pathauto": "^1.8",
         "drupal/search_api": "^1.18",
+        "drupal/subrequests": "^3.0",
         "drush/drush": "^10.3"
     },
     "require-dev": {
@@ -82,7 +87,6 @@
         },
         "patches": {
             "drupal/core": {
-                "#2996114": "https://www.drupal.org/files/issues/2020-06-06/2996114-141.patch",
                 "#2863785": "https://www.drupal.org/files/issues/config_import_creates-2863785-3.patch"
             },
             "drupal/paragraphs" : {
