--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -58,6 +58,7 @@ permissions:
   - 'create paragraph content image'
   - 'create paragraph content image_and_card'
   - 'create paragraph content info'
+  - 'create paragraph content lead'
   - 'create paragraph content link'
   - 'create paragraph content link_internal'
   - 'create paragraph content mainheading'
@@ -111,6 +112,7 @@ permissions:
   - 'delete paragraph content image'
   - 'delete paragraph content image_and_card'
   - 'delete paragraph content info'
+  - 'delete paragraph content lead'
   - 'delete paragraph content link'
   - 'delete paragraph content link_internal'
   - 'delete paragraph content mainheading'
@@ -175,6 +177,7 @@ permissions:
   - 'update paragraph content image'
   - 'update paragraph content image_and_card'
   - 'update paragraph content info'
+  - 'update paragraph content lead'
   - 'update paragraph content link'
   - 'update paragraph content link_internal'
   - 'update paragraph content mainheading'
@@ -208,6 +211,7 @@ permissions:
   - 'view paragraph content image'
   - 'view paragraph content image_and_card'
   - 'view paragraph content info'
+  - 'view paragraph content lead'
   - 'view paragraph content link'
   - 'view paragraph content link_internal'
   - 'view paragraph content mainheading'
