--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -45,6 +45,8 @@ module:
   menu_block_current_language: 0
   menu_link_content: 0
   menu_ui: 0
+  migrate: 0
+  migrate_plus: 0
   node: 0
   options: 0
   page_cache: 0
@@ -65,6 +67,7 @@ module:
   text: 0
   token: 0
   toolbar: 0
+  tyollisyyspalvelut_migrate: 0
   update: 0
   user: 0
   views_ui: 0
