--- a/conf/cmi/field.field.node.page.field_page_content.yml
+++ b/conf/cmi/field.field.node.page.field_page_content.yml
@@ -13,6 +13,7 @@ dependencies:
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.image_and_card
     - paragraphs.paragraphs_type.info
+    - paragraphs.paragraphs_type.lead
     - paragraphs.paragraphs_type.link
     - paragraphs.paragraphs_type.link_internal
     - paragraphs.paragraphs_type.mainheading
@@ -48,6 +49,7 @@ settings:
       image: image
       image_and_card: image_and_card
       info: info
+      lead: lead
       link_internal: link_internal
       link: link
       mainheading: mainheading
@@ -61,62 +63,62 @@ settings:
     target_bundles_drag_drop:
       accordion:
         enabled: true
-        weight: -39
+        weight: -41
       blog_list:
         enabled: true
-        weight: -38
+        weight: -40
       card:
-        weight: -37
+        weight: -39
         enabled: false
       card_list:
         enabled: true
-        weight: -36
+        weight: -38
       events_list:
         enabled: true
-        weight: -34
+        weight: -36
       hero:
         enabled: true
-        weight: -35
+        weight: -37
       image:
         enabled: true
-        weight: -33
+        weight: -35
       image_and_card:
         enabled: true
-        weight: -32
+        weight: -34
       info:
         enabled: true
-        weight: -31
+        weight: -33
+      lead:
+        enabled: true
+        weight: -32
       link:
         enabled: true
-        weight: -28
+        weight: -30
       link_internal:
         enabled: true
-        weight: -30
+        weight: -31
       mainheading:
         enabled: true
-        weight: -27
+        weight: -29
       news_list:
         enabled: true
-        weight: -26
+        weight: -28
       phone_number_box:
         enabled: true
-        weight: -25
+        weight: -27
       search:
         enabled: true
-        weight: -24
+        weight: -26
       subheading:
         enabled: true
-        weight: -23
+        weight: -25
       sujo_embedded:
         enabled: true
-        weight: -22
-      test:
-        weight: -29
-        enabled: false
+        weight: -24
       text:
         enabled: true
-        weight: -21
+        weight: -23
       video:
         enabled: true
-        weight: 40
+        weight: -22
 field_type: entity_reference_revisions
