--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_subheading.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_subheading.yml
@@ -1,5 +1,5 @@
-id: import_paragraph_image_and_card
-label: Import Image and card paragraph
+id: import_paragraph_subheading
+label: Import Subheading paragraph
 migration_group: tyollisyyspalvelut
 migration_dependencies: {}
 dependencies:
@@ -24,8 +24,7 @@ source:
   # Flags whether to track changes to incoming data. If TRUE, we will maintain
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
-  urls:
-    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/image_and_card
+  urls: https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/subheading
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -36,7 +35,7 @@ source:
   fields:
     -
       name: uuid
-      label: 'uuid'
+      label: 'uid'
       selector: id
     -
       name: id
@@ -83,20 +82,20 @@ source:
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_ic_card
-      label: 'Card'
-      selector: /relationships/field_ic_card
+      name: field_subheading_title
+      label: 'Title'
+      selector: /attributes/field_subheading_title
     -
-      name: field_ic_image
-      label: 'Image'
-      selector: /relationships/field_ic_image
+      name: field_title_color
+      label: 'Field title color'
+      selector: /attributes/field_title_color
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: image_and_card
+    default_value: subheading
   id: id
   uuid: uuid
   revision_id: revision_id
@@ -116,25 +115,16 @@ process:
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_ic_card:
+  field_subheading_title: field_subheading_title
+  field_title_color:
     plugin: sub_process
-    source: field_ic_card/data
+    source: field_title_color/data
     process:
       target_id:
         plugin: entity_lookup
         source: id
         value_key: uuid
-        bundle: card
-        bundle_key: type
-        entity_type: paragraph
+        bundle: colors
+        bundle_key: vid
+        entity_type: taxonomy_term
         ignore_case: true
-      target_revision_id: meta/target_revision_id
-  field_ic_image:
-    target_id:
-      plugin: entity_lookup
-      source: field_ic_image/data/id
-      value_key: uuid
-      bundle: image
-      bundle_key: bundle
-      entity_type: media
-      ignore_case: true
