--- a/conf/cmi/migrate_plus.migration.import_news_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_news_fi.yml
@@ -1,4 +1,4 @@
-uuid: d4672753-7587-4871-9a86-03e26f1261c8
+uuid: f845f4e6-06a5-4ec0-a0c9-0a768d9d6d65
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: LR13zpFQEfhMfip3M_0UqjLOtrhGKTWSj4ifaHDT5ZE
+  default_config_hash: mn25ZcEym0j75_r5WdKeq5Y_Rddca8ady5IqGeZRGZQ
 id: import_news_fi
 class: null
 field_plugin_method: null
@@ -58,10 +58,6 @@ source:
       name: langcode
       label: Langcode
       selector: /attributes/langcode
-    -
-      name: default_langcode
-      label: 'Default Langcode'
-      selector: /attributes/default_langcode
     -
       name: path
       label: Path
@@ -116,7 +112,9 @@ process:
   sticky: sticky
   promote: promote
   langcode: langcode
-  default_langcode: default_langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   path/alias: path/alias
   path/pid: path/pid
   path/langcode: path/langcode
@@ -134,6 +132,14 @@ process:
     bundle_key: vid
     entity_type: taxonomy_term
     ignore_case: true
+  field_page_content:
+    plugin: sub_process
+    source: field_page_content/data
+    process:
+      target_id:
+        plugin: path_mapping
+        source: id
+      target_revision_id: meta/target_revision_id
 destination:
   plugin: 'entity:node'
 migration_dependencies: {  }
