--- a/conf/cmi/migrate_plus.migration.import_pages_en.yml
+++ b/conf/cmi/migrate_plus.migration.import_pages_en.yml
@@ -1,4 +1,4 @@
-uuid: 9686508e-e250-4189-b7b4-76608186af63
+uuid: 17d6c773-2d93-4ef9-afde-ae30d2d267a9
 langcode: en
 status: true
 dependencies:
@@ -6,20 +6,21 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: S6NJ3nNQcyKV0Z9PpjaicbH8OZs8dUX36nZ5cLB0gHc
-id: import_pages
+  default_config_hash: Sm2QtFkeicgbxSOAQeh1X25qQTUCwO2gOi3h9VsyxFY
+id: import_pages_en
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import pages'
+label: 'Import pages en'
 source:
+  translations: true
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
-  urls: 'https://edit.tyollisyyspalvelut.hel.fi/apijson/node/page'
+  urls: 'https://edit.tyollisyyspalvelut.hel.fi/apijson/node/page?filter[langcode]=en'
   item_selector: data/
   fields:
     -
@@ -59,10 +60,6 @@ source:
       label: Langcode
       selector: /attributes/langcode
     -
-      name: default_langcode
-      label: 'Default Langcode'
-      selector: /attributes/default_langcode
-    -
       name: path
       label: Path
       selector: /attributes/path
@@ -80,7 +77,7 @@ source:
       selector: /relationships/uid
     -
       name: field_page_width
-      label: 'Paragraph Width'
+      label: 'Paragraph width'
       selector: /relationships/field_page_width
     -
       name: field_page_content
@@ -93,16 +90,29 @@ process:
   type:
     plugin: default_value
     default_value: page
-  nid: nid
+  nid:
+    plugin: migration_lookup
+    source: nid
+    migration: import_pages_fi
+    no_stub: true
   uuid: id
   title: title
-  created: created
-  changed: changed
+  created:
+    -
+      plugin: format_date
+      from_format: 'Y-m-d\TH:i:sP'
+      to_format: U
+      source: created
+  changed:
+    -
+      plugin: format_date
+      from_format: 'Y-m-d\TH:i:sP'
+      to_format: U
+      source: changed
   status: status
   sticky: sticky
   promote: promote
   langcode: langcode
-  default_langcode: default_langcode
   path/alias: path/alias
   path/pid: path/pid
   path/langcode: path/langcode
@@ -111,18 +121,14 @@ process:
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width:
-    plugin: sub_process
-    source: field_page_width/data
-    process:
-      target_id:
-        plugin: entity_lookup
-        source: id
-        value_key: uuid
-        bundle: paragraph_width
-        bundle_key: vid
-        entity_type: taxonomy_term
-        ignore_case: true
+  field_page_width/target_id:
+    plugin: entity_lookup
+    source: field_page_width/data/id
+    value_key: uuid
+    bundle: paragraph_width
+    bundle_key: vid
+    entity_type: taxonomy_term
+    ignore_case: true
   field_page_content:
     plugin: sub_process
     source: field_page_content/data
@@ -131,10 +137,14 @@ process:
         plugin: entity_lookup
         source: id
         value_key: uuid
-        bundle: 1
-        bundle_key: status
-        entity_type: node
+        bundle: en
+        bundle_key: langcode
+        entity_type: paragraph
         ignore_case: true
+      target_revision_id: meta/target_revision_id
 destination:
   plugin: 'entity:node'
-migration_dependencies: {  }
+  translations: true
+migration_dependencies:
+  required:
+    - import_pages_fi
