--- a/conf/cmi/migrate_plus.migration.import_pages_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_pages_sv.yml
@@ -1,4 +1,4 @@
-uuid: e512ed44-ab79-4a39-9c10-b178c837986f
+uuid: 04c61b72-db64-488b-8d37-f7f74b193838
 langcode: en
 status: true
 dependencies:
@@ -6,20 +6,21 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: tWBmgB_A6v10sWdNCPG9eF86pUP8JNV_MuDVh_KnsrA
-id: import_blogs
+  default_config_hash: Dwg_09lbl5Pr-ADMwFOWjMxiafNCQKUru17zxYoGFCI
+id: import_pages_sv
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import blogs'
+label: 'Import pages sv'
 source:
+  translations: true
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
-  urls: 'https://edit.tyollisyyspalvelut.hel.fi/apijson/node/blog'
+  urls: 'https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/node/page?filter[langcode]=sv'
   item_selector: data/
   fields:
     -
@@ -59,10 +60,6 @@ source:
       label: Langcode
       selector: /attributes/langcode
     -
-      name: default_langcode
-      label: 'Default Langcode'
-      selector: /attributes/default_langcode
-    -
       name: path
       label: Path
       selector: /attributes/path
@@ -74,10 +71,6 @@ source:
       name: content_translation_outdated
       label: 'Content translation outdated'
       selector: /attributes/content_translation_outdated
-    -
-      name: field_summary
-      label: 'Field summary'
-      selector: /attributes/field_summary
     -
       name: uid
       label: uid
@@ -96,8 +89,12 @@ source:
 process:
   type:
     plugin: default_value
-    default_value: blog
-  nid: nid
+    default_value: page
+  nid:
+    plugin: migration_lookup
+    source: nid
+    migration: import_pages_fi
+    no_stub: true
   uuid: id
   title: title
   created:
@@ -116,13 +113,11 @@ process:
   sticky: sticky
   promote: promote
   langcode: langcode
-  default_langcode: default_langcode
   path/alias: path/alias
   path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
-  field_summary: field_summary
   uid:
     plugin: default_value
     default_value: 1
@@ -134,6 +129,22 @@ process:
     bundle_key: vid
     entity_type: taxonomy_term
     ignore_case: true
+  field_page_content:
+    plugin: sub_process
+    source: field_page_content/data
+    process:
+      target_id:
+        plugin: entity_lookup
+        source: id
+        value_key: uuid
+        bundle: sv
+        bundle_key: langcode
+        entity_type: paragraph
+        ignore_case: true
+      target_revision_id: meta/target_revision_id
 destination:
   plugin: 'entity:node'
-migration_dependencies: {  }
+  translations: true
+migration_dependencies:
+  required:
+    - import_pages_fi
