--- a/conf/cmi/migrate_plus.migration.import_paragraph_accordion.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_accordion.yml
@@ -1,4 +1,4 @@
-uuid: d85f5afa-44d4-41bc-83fc-444db423b0f5
+uuid: 0ee4b9a9-da80-4f65-9bfd-362ca0ae7763
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: Zqb0ry9AkfwURALCyWvaDbzLtibLQInFXqx4FQrtfbM
+  default_config_hash: gn8ENoosFCKfbj70ST3hH9PEmxtS_3t0f5yhW3-lKl8
 id: import_paragraph_accordion
 class: null
 field_plugin_method: null
@@ -23,17 +23,17 @@ source:
   item_selector: data/
   fields:
     -
-      name: id
-      label: id
+      name: uuid
+      label: uid
       selector: id
     -
-      name: pid
-      label: pid
+      name: id
+      label: id
       selector: /attributes/drupal_internal__id
     -
-      name: title
-      label: Title
-      selector: /attributes/title
+      name: revision_id
+      label: 'Revision id'
+      selector: /attributes/drupal_internal__revision_id
     -
       name: created
       label: Created
@@ -75,15 +75,15 @@ source:
       label: 'Field accordion text'
       selector: /attributes/field_accordion_text
   ids:
-    pid:
+    id:
       type: integer
 process:
   type:
     plugin: default_value
     default_value: accordion
-  id: pid
-  uuid: id
-  title: title
+  id: id
+  uuid: uuid
+  revision_id: revision_id
   created:
     -
       plugin: format_date
@@ -104,5 +104,5 @@ process:
   field_accordion_text/format: field_accordion_text/format
   field_accordion_text/prosessed: field_accordion_text/prosessed
 destination:
-  plugin: 'entity:paragraph'
+  plugin: 'entity_reference_revisions:paragraph'
 migration_dependencies: {  }
