--- a/conf/cmi/migrate_plus.migration.import_paragraph_phone_number_box.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_phone_number_box.yml
@@ -1,4 +1,4 @@
-uuid: e45ab81d-8d73-4662-85df-72c905a2ac40
+uuid: fd6c9790-20e7-40a4-9bea-4febe08042ef
 langcode: en
 status: true
 dependencies:
@@ -6,34 +6,35 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: fglDfame5Xpqo2I91lpO2vp8h8XepZqO6Bdu7ULSE5c
-id: import_paragraph_mainheading
+  default_config_hash: lmSBI6cMembclsWxnIAo7wZCAO_zBZzZfz3I6Ow0Nm0
+id: import_paragraph_phone_number_box
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import Mainheading paragraph'
+label: 'Import Phone number box paragraph'
 source:
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
-  urls: 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/mainheading'
+  urls:
+    - 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/phone_number_box'
   item_selector: data/
   fields:
     -
-      name: id
-      label: id
+      name: uuid
+      label: uuid
       selector: id
     -
-      name: pid
-      label: pid
+      name: id
+      label: id
       selector: /attributes/drupal_internal__id
     -
-      name: title
-      label: Title
-      selector: /attributes/title
+      name: revision_id
+      label: 'Revision id'
+      selector: /attributes/drupal_internal__revision_id
     -
       name: created
       label: Created
@@ -67,27 +68,23 @@ source:
       label: uid
       selector: /relationships/uid
     -
-      name: field_show_date
-      label: 'Show date'
-      selector: /attributes/field_show_date
+      name: field_pb_text
+      label: Text
+      selector: /attributes/field_pb_text
     -
-      name: field_title
-      label: 'Field title'
-      selector: /attributes/field_title
-    -
-      name: field_title_color
-      label: 'Field title color'
-      selector: /attributes/field_title_color
+      name: field_pb_title
+      label: Title
+      selector: /attributes/field_pb_title
   ids:
-    pid:
+    id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: accordion
-  id: pid
-  uuid: id
-  title: title
+    default_value: phone_number_box
+  id: id
+  uuid: uuid
+  revision_id: revision_id
   created:
     -
       plugin: format_date
@@ -103,20 +100,10 @@ process:
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_show_date: field_show_date
-  field_title: field_title
-  field_title_color:
-    plugin: sub_process
-    source: field_title_color/data
-    process:
-      target_id:
-        plugin: entity_lookup
-        source: id
-        value_key: uuid
-        bundle: colors
-        bundle_key: vid
-        entity_type: taxonomy_term
-        ignore_case: true
+  field_pb_text/value: field_pb_text/value
+  field_pb_text/format: field_pb_text/format
+  field_pb_text/prosessed: field_pb_text/prosessed
+  field_pb_title: field_pb_title
 destination:
-  plugin: 'entity:paragraph'
+  plugin: 'entity_reference_revisions:paragraph'
 migration_dependencies: {  }
