--- a/conf/cmi/migrate_plus.migration.import_paragraph_text.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_text.yml
@@ -1,4 +1,4 @@
-uuid: 910bf14e-4018-493c-8c55-ff1d54bd82d6
+uuid: 8d207663-28d1-437b-a3e0-e68af5122834
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: nR9dx4Si1LJdRRM8unr6cKtHFVK8gfo1GwJXTdv-7r4
+  default_config_hash: tBEfJhVfNjfDZj4z8LWiYl20L-KaG7QMX6_lpUi8tOE
 id: import_paragraph_text
 class: null
 field_plugin_method: null
@@ -19,21 +19,23 @@ source:
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
-  urls: 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/text'
+  urls:
+    - 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/text?page%5Boffset%5D=0&page%5Blimit%5D=50'
+    - 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/text?page%5Boffset%5D=50&page%5Blimit%5D=50'
   item_selector: data/
   fields:
     -
-      name: id
-      label: id
+      name: uuid
+      label: uuid
       selector: id
     -
-      name: pid
-      label: pid
+      name: id
+      label: id
       selector: /attributes/drupal_internal__id
     -
-      name: title
-      label: Title
-      selector: /attributes/title
+      name: revision_id
+      label: 'Revision id'
+      selector: /attributes/drupal_internal__revision_id
     -
       name: created
       label: Created
@@ -71,15 +73,15 @@ source:
       label: Text
       selector: /attributes/field_text_demo
   ids:
-    pid:
+    id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: accordion
-  id: pid
-  uuid: id
-  title: title
+    default_value: text
+  id: id
+  uuid: uuid
+  revision_id: revision_id
   created:
     -
       plugin: format_date
@@ -95,10 +97,9 @@ process:
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_title: field_title
   field_text_demo/value: field_text_demo/value
   field_text_demo/format: field_text_demo/format
   field_text_demo/prosessed: field_text_demo/prosessed
 destination:
-  plugin: 'entity:paragraph'
+  plugin: 'entity_reference_revisions:paragraph'
 migration_dependencies: {  }
