--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_landing_fi.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_landing_fi.yml
@@ -1,5 +1,5 @@
-id: import_pages
-label: Import pages
+id: import_landing_fi
+label: Import landing fi
 migration_group: tyollisyyspalvelut
 migration_dependencies: {}
 dependencies:
@@ -24,7 +24,7 @@ source:
   # Flags whether to track changes to incoming data. If TRUE, we will maintain
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
-  urls: https://edit.tyollisyyspalvelut.hel.fi/apijson/node/page
+  urls: https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/node/landing?filter[langcode]=fi
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -70,10 +70,6 @@ source:
       label: 'Langcode'
       selector: /attributes/langcode
     -
-      name: default_langcode
-      label: 'Default Langcode'
-      selector: /attributes/default_langcode
-    -
       name: path
       label: 'Path'
       selector: /attributes/path
@@ -91,7 +87,7 @@ source:
       selector: /relationships/uid
     -
       name: field_page_width
-      label: 'Paragraph Width'
+      label: 'Paragraph width'
       selector: /relationships/field_page_width
     -
       name: field_page_content
@@ -103,17 +99,29 @@ source:
 process:
   type:
     plugin: default_value
-    default_value: page
+    default_value: landing
   nid: nid
   uuid: id
   title: title
-  created: created
-  changed: changed
+  created:
+    -
+      plugin: format_date
+      from_format: 'Y-m-d\TH:i:sP'
+      to_format: 'U'
+      source: created
+  changed:
+    -
+      plugin: format_date
+      from_format: 'Y-m-d\TH:i:sP'
+      to_format: 'U'
+      source: changed
   status: status
   sticky: sticky
   promote: promote
   langcode: langcode
-  default_langcode: default_langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   path/alias: path/alias
   path/pid: path/pid
   path/langcode: path/langcode
@@ -122,18 +130,14 @@ process:
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width:
-    plugin: sub_process
-    source: field_page_width/data
-    process:
-      target_id:
-        plugin: entity_lookup
-        source: id
-        value_key: uuid
-        bundle: paragraph_width
-        bundle_key: vid
-        entity_type: taxonomy_term
-        ignore_case: true
+  field_page_width/target_id:
+    plugin: entity_lookup
+    source: field_page_width/data/id
+    value_key: uuid
+    bundle: paragraph_width
+    bundle_key: vid
+    entity_type: taxonomy_term
+    ignore_case: true
   field_page_content:
     plugin: sub_process
     source: field_page_content/data
@@ -142,7 +146,8 @@ process:
         plugin: entity_lookup
         source: id
         value_key: uuid
-        bundle: 1
-        bundle_key: status
-        entity_type: node
+        bundle: fi
+        bundle_key: langcode
+        entity_type: paragraph
         ignore_case: true
+      target_revision_id: meta/target_revision_id
