--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_news_fi.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_news_fi.yml
@@ -1,9 +1,7 @@
 id: import_news_fi
 label: Import news fi
 migration_group: tyollisyyspalvelut
-migration_dependencies:
-  required:
-    - import_paragraph_text
+migration_dependencies: {}
 dependencies:
   enforced:
     module:
@@ -72,10 +70,6 @@ source:
       label: 'Langcode'
       selector: /attributes/langcode
     -
-      name: default_langcode
-      label: 'Default Langcode'
-      selector: /attributes/default_langcode
-    -
       name: path
       label: 'Path'
       selector: /attributes/path
@@ -129,7 +123,9 @@ process:
   sticky: sticky
   promote: promote
   langcode: langcode
-  default_langcode: default_langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   path/alias: path/alias
   path/pid: path/pid
   path/langcode: path/langcode
@@ -147,26 +143,27 @@ process:
     bundle_key: vid
     entity_type: taxonomy_term
     ignore_case: true
-  # field_page_content:
-  #   plugin: sub_process
-  #   source: field_page_content/data
-  #   process:
-  #     target_id:
-  #       plugin: path_mapping
-  #       source: id
   field_page_content:
     plugin: sub_process
     source: field_page_content/data
     process:
       target_id:
-        plugin: entity_lookup
+        plugin: path_mapping
         source: id
-        value_key: uuid
-        bundle: fi
-        bundle_key: langcode
-        entity_type: paragraph
-        ignore_case: true
       target_revision_id: meta/target_revision_id
+  # field_page_content:
+  #   plugin: sub_process
+  #   source: field_page_content/data
+  #   process:
+  #     target_id:
+  #       plugin: entity_lookup
+  #       source: id
+  #       value_key: uuid
+  #       bundle: fi
+  #       bundle_key: langcode
+  #       entity_type: paragraph
+  #       ignore_case: true
+  #     target_revision_id: meta/target_revision_id
   # pseudo_mbe_book_paragraph:
   #   plugin: migration_lookup
   #   migration: import_paragraph_text
