--- a/public/modules/custom/tyollisyyspalvelut_migrate/migrate_plus.migration.import_paragraph_image_and_card.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/migrate_plus.migration.import_paragraph_image_and_card.yml
@@ -1,5 +1,5 @@
-id: import_paragraph_mainheading
-label: Import Mainheading paragraph
+id: import_paragraph_image_and_card
+label: Import Image and card paragraph
 migration_group: tyollisyyspalvelut
 migration_dependencies: {}
 dependencies:
@@ -24,7 +24,7 @@ source:
   # Flags whether to track changes to incoming data. If TRUE, we will maintain
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
-  urls: https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/mainheading
+  urls: https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/image_and_card
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -35,7 +35,7 @@ source:
   fields:
     -
       name: uuid
-      label: 'uid'
+      label: 'uuid'
       selector: id
     -
       name: id
@@ -45,10 +45,6 @@ source:
       name: revision_id
       label: 'Revision id'
       selector: /attributes/drupal_internal__revision_id
-    -
-      name: title
-      label: 'Title'
-      selector: /attributes/title
     -
       name: created
       label: 'Created'
@@ -82,28 +78,23 @@ source:
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_show_date
-      label: 'Show date'
-      selector: /attributes/field_show_date
+      name: field_ic_card
+      label: 'Card'
+      selector: /relationships/field_ic_card
     -
-      name: field_title
-      label: 'Field title'
-      selector: /attributes/field_title
-    -
-      name: field_title_color
-      label: 'Field title color'
-      selector: /attributes/field_title_color
+      name: field_ic_image
+      label: 'Image'
+      selector: /relationships/field_ic_image
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: mainheading
+    default_value: image_and_card
   id: id
   uuid: uuid
   revision_id: revision_id
-  title: title
   created:
     -
       plugin: format_date
@@ -119,17 +110,25 @@ process:
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_show_date: field_show_date
-  field_title: field_title
-  field_title_color:
+  field_ic_card:
     plugin: sub_process
-    source: field_title_color/data
+    source: field_ic_card/data
     process:
       target_id:
         plugin: entity_lookup
         source: id
         value_key: uuid
-        bundle: colors
-        bundle_key: vid
-        entity_type: taxonomy_term
+        bundle: card
+        bundle_key: type
+        entity_type: paragraph
         ignore_case: true
+      target_revision_id: meta/target_revision_id
+  field_ic_image:
+    target_id:
+      plugin: entity_lookup
+      source: field_ic_image/data/id
+      value_key: uuid
+      bundle: image
+      bundle_key: bundle
+      entity_type: media
+      ignore_case: true
