--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -55,6 +55,7 @@ permissions:
   - 'create paragraph content card_list'
   - 'create paragraph content events_list'
   - 'create paragraph content hero'
+  - 'create paragraph content highlighted_text'
   - 'create paragraph content image'
   - 'create paragraph content image_and_card'
   - 'create paragraph content info'
@@ -109,6 +110,7 @@ permissions:
   - 'delete paragraph content card_list'
   - 'delete paragraph content events_list'
   - 'delete paragraph content hero'
+  - 'delete paragraph content highlighted_text'
   - 'delete paragraph content image'
   - 'delete paragraph content image_and_card'
   - 'delete paragraph content info'
@@ -174,6 +176,7 @@ permissions:
   - 'update paragraph content card_list'
   - 'update paragraph content events_list'
   - 'update paragraph content hero'
+  - 'update paragraph content highlighted_text'
   - 'update paragraph content image'
   - 'update paragraph content image_and_card'
   - 'update paragraph content info'
@@ -208,6 +211,7 @@ permissions:
   - 'view paragraph content card_list'
   - 'view paragraph content events_list'
   - 'view paragraph content hero'
+  - 'view paragraph content highlighted_text'
   - 'view paragraph content image'
   - 'view paragraph content image_and_card'
   - 'view paragraph content info'
