--- a/conf/cmi/editor.editor.basic_html.yml
+++ b/conf/cmi/editor.editor.basic_html.yml
@@ -38,18 +38,21 @@ settings:
           name: 'Block Formatting'
           items:
             - Format
+            - Styles
         -
           name: Tools
           items:
             - Source
   plugins:
+    language:
+      language_list: un
     stylescombo:
-      styles: ''
+      styles: "a.link-internal|Link internal\r\na.link-external|Link external"
 image_upload:
   status: true
   scheme: public
   directory: inline-images
   max_size: ''
   max_dimensions:
-    width: 0
-    height: 0
+    width: null
+    height: null
