--- a/conf/cmi/field.field.node.news.field_page_content.yml
+++ b/conf/cmi/field.field.node.news.field_page_content.yml
@@ -8,6 +8,7 @@ dependencies:
     - paragraphs.paragraphs_type.accordion
     - paragraphs.paragraphs_type.card_list
     - paragraphs.paragraphs_type.hero
+    - paragraphs.paragraphs_type.highlighted_text
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.image_and_card
     - paragraphs.paragraphs_type.info
@@ -38,6 +39,7 @@ settings:
     target_bundles:
       accordion: accordion
       hero: hero
+      highlighted_text: highlighted_text
       image: image
       card_list: card_list
       image_and_card: image_and_card
@@ -53,62 +55,65 @@ settings:
     target_bundles_drag_drop:
       accordion:
         enabled: true
-        weight: -41
+        weight: -43
       blog_list:
-        weight: -23
+        weight: -24
         enabled: false
       card:
-        weight: -40
+        weight: -42
         enabled: false
       card_list:
         enabled: true
-        weight: -37
+        weight: -38
       events_list:
-        weight: -32
+        weight: -33
         enabled: false
       hero:
         enabled: true
-        weight: -39
+        weight: -41
+      highlighted_text:
+        enabled: true
+        weight: -40
       image:
         enabled: true
-        weight: -38
+        weight: -39
       image_and_card:
         enabled: true
-        weight: -36
+        weight: -37
       info:
         enabled: true
-        weight: -35
+        weight: -36
       lead:
         enabled: true
-        weight: -34
+        weight: -35
       link:
         enabled: true
-        weight: -31
+        weight: -32
       link_internal:
         enabled: true
-        weight: -33
+        weight: -34
       mainheading:
         enabled: true
-        weight: -30
+        weight: -31
       news_list:
-        weight: -29
+        weight: -30
         enabled: false
       phone_number_box:
         enabled: true
-        weight: -28
+        weight: -29
       search:
-        weight: -25
+        weight: -26
         enabled: false
       subheading:
         enabled: true
-        weight: -27
+        weight: -28
       sujo_embedded:
-        weight: -24
+        weight: -25
         enabled: false
       text:
         enabled: true
-        weight: -26
+        weight: -27
       video:
         enabled: true
-        weight: -22
+        weight: -23
 field_type: entity_reference_revisions
